force-app/main/default/objects/Sellout_Report_User__c/Sellout_Report_User__c.object-meta.xml
<CustomObject>
    <label>Sellout Report User</label>
    <nameField>
        <displayFormat>SRU-{0000}</displayFormat>
        <label>Sellout Report User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sellout Report User</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>