force-app/main/default/objects/Sellout_Report_User__c/fields/Refrigerator_Key_Model__c.field-meta.xml
<CustomField>
    <fullName>Refrigerator_Key_Model__c</fullName>
    <label>Refrigerator Key Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>