force-app/main/default/objects/Sellout_Report_User__c/fields/TV_Key_Model__c.field-meta.xml
<CustomField>
    <fullName>TV_Key_Model__c</fullName>
    <label>TV Key Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>