force-app/main/default/objects/Sellout_Report_User__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>TV_Key_Model__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>